postgresql-common (80) UNRELEASED; urgency=low

  * pg_upgradecluster: Fix locale error checking.
  * pg_upgradecluster: Use cluster_exists() instead of
    cluster_data_directory().

 -- Martin Pitt <mpitt@debian.org>  Sun, 14 Oct 2007 14:38:05 +0200

postgresql-common (79) unstable; urgency=low

  * debian/supported-versions: Welcome, version 8.3!
  * pg_createcluster: Add configure_8_3().
  * PgCommon.pm, cluster_info(): 8.3 defaults to 'autovacuum = On' when not
    given, reflect that in the avac_enable return value.
  * t/050_encodings.t: 8.3 onwards refuses to create a cluster with an
    inconsistent locale/encoding combination. Just drop the test case, it does
    not make too much sense anyway.
  * t/090_multicluster.t: Do not rely on output of createdb, call it with -q.
    8.3 behaves differently here.
  * t/060_obsolete_confparams.t: Add full set of 8.2 postgresql.conf options
    for testing upgrades to 8.3.
  * pg_upgradecluster: When upgrading to 8.3, transition changed configuration
    options:
    - bgwriter_lru_percent, bgwriter_all_percent, bgwriter_all_maxpages,
      stats_start_collector, and stats_reset_on_server_start: deprecated.
    - redirect_stderr -> logging_collector
    - stats_command_string -> track_activities
    - stats_block_level || stats_row_level -> track_counts
    - Explicitly enable archive_mode when archive_command is set.

 -- Martin Pitt <mpitt@debian.org>  Wed, 10 Oct 2007 00:27:41 +0200

postgresql-common (78) unstable; urgency=low

  * debian/postgresql-common.postinst: Only clean up
    /usr/lib/postgresql/dumpall/ on upgrades if it is actually a directory.
    (Closes: #440596)

 -- Martin Pitt <mpitt@debian.org>  Sun, 16 Sep 2007 20:59:30 +0200

postgresql-common (77) unstable; urgency=low

  * debian/control: Fix obsolete ${Source-Version}.
  * t/020_create_sql_remove.t: Create fake rotated log files to check that
    they are cleaned up properly.
  * pg_dropcluster: Remove rotated logs, too. (part of #431643)